--- a/resource-service/src/main/resources/application.properties
+++ b/resource-service/src/main/resources/application.properties
@@ -6,4 +6,16 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 server.port=8080
 
-song.service.url=da
+song-service.url=http://localhost:8081
+song-service.connect-timeout=5s
+song-service.read-timeout=10s
+
+# Outbox Configuration
+outbox.max-attempts=8
+outbox.create-batch-size=100
+outbox.delete-batch-size=200
+
+# Outbox Scheduler Configuration
+outbox.scheduler.enabled=true
+outbox.scheduler.create-delay=10s
+outbox.scheduler.delete-delay=80s
