Containerize services with Dockerfiles and Compose-managed Postgres schema init
- Add multi-stage Alpine Dockerfiles for resource-service and song-service
- Add Postgres init SQL scripts mounted via /docker-entrypoint-initdb.d
- Update compose.yaml to build/run both services + db containers with env-based config
- Update application.properties to use env overrides and disable Hibernate ddl-auto
- Refresh README with local vs full Docker Compose run instructions

--- a/compose.yaml
+++ b/compose.yaml
@@ -4,23 +4,47 @@ services:
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_DB: resource-db
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: ${RESOURCE_DB_NAME}
+      POSTGRES_USER: ${RESOURCE_DB_USER}
+      POSTGRES_PASSWORD: ${RESOURCE_DB_PASSWORD}
     volumes:
-      - resource_data:/var/lib/postgresql/data
+      - ./init-scripts/resource-db:/docker-entrypoint-initdb.d:ro
 
   song-db:
     image: postgres:17-alpine
     ports:
       - "5433:5432"
     environment:
-      POSTGRES_DB: song-db
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: ${SONG_DB_NAME}
+      POSTGRES_USER: ${SONG_DB_USER}
+      POSTGRES_PASSWORD: ${SONG_DB_PASSWORD}
     volumes:
-      - song_data:/var/lib/postgresql/data
+      - ./init-scripts/song-db:/docker-entrypoint-initdb.d:ro
 
-volumes:
-  resource_data:
-  song_data:
+  song-service:
+    build:
+      context: ./song-service
+      dockerfile: Dockerfile
+    depends_on:
+      - song-db
+    ports:
+      - "8081:8081"
+    environment:
+      SPRING_DATASOURCE_URL: ${SONG_DB_URL}
+      SPRING_DATASOURCE_USERNAME: ${SONG_DB_USER}
+      SPRING_DATASOURCE_PASSWORD: ${SONG_DB_PASSWORD}
+
+  resource-service:
+    build:
+      context: ./resource-service
+      dockerfile: Dockerfile
+    depends_on:
+      - resource-db
+      - song-service
+    ports:
+      - "8080:8080"
+    environment:
+      SPRING_DATASOURCE_URL: ${RESOURCE_DB_URL}
+      SPRING_DATASOURCE_USERNAME: ${RESOURCE_DB_USER}
+      SPRING_DATASOURCE_PASSWORD: ${RESOURCE_DB_PASSWORD}
+      SONG_SERVICE_URL: ${SONG_SERVICE_URL}
