--- a/resource-service/src/main/resources/application.properties
+++ b/resource-service/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/resource-db
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/resource-db}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:postgres}
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 server.port=8080
 
-song-service.url=http://localhost:8081
+song-service.url=${SONG_SERVICE_URL:http://localhost:8081}
 song-service.connect-timeout=5s
 song-service.read-timeout=10s
